# H2Lib

./: .gitignore  APPROACHES.md  CMakeLists.txt  COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  REFACTORING_PLAN.md  SIMPLIFIED_API.md
Examples/: CMakeLists.txt  example_index_kernels.c  example_opaque_api.c  example_simple_api.c
Tests/: CMakeLists.txt  test_kernelmatrix.c
include/: h2lib_interface.hpp
src/: CMakeLists.txt  h2lib_interface.cpp
